--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js">	</script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
   <!-- for animation -->
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
@@ -33,6 +32,206 @@
 </head>
 
 <body>
+
+  <div class="splach">
+
+    <svg class="pl" viewBox="0 0 32 32" width="32px" height="32px">
+      <g stroke="currentcolor" stroke-linecap="round" stroke-width="1" stroke-dasharray="5 8">
+        <g class="pl__lines" transform="rotate(0,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-15,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-30,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-45,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-60,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-75,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-90,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-105,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-120,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-135,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-150,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-165,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-180,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-195,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-210,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-225,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-240,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-255,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-270,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-285,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-300,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-315,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-330,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+        <g class="pl__lines" transform="rotate(-345,16,16)">
+          <g class="pl__line-wobble" transform="translate(0,6.5)">
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+            <line class="pl__line" x1="16" y1="16" x2="16" y2="23"></line>
+          </g>
+        </g>
+      </g>
+    </svg>
+  </div>
 
   <!-- mobile menu -->
   <nav id="menu">
@@ -68,7 +267,7 @@
             </a>
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
-                <li class="nav_item">
+                <li class="nav_item active">
                   <a class="nav_link" href="#">Home</a>
                 </li>
                 <li class="nav_item">
