--- a/index.html
+++ b/index.html
@@ -237,19 +237,19 @@
   <nav id="menu">
     <ul>
       <li class="active">
-        <a href="#">Home</a>
+        <a href="#HomeSection">Home</a>
       </li>
       <li>
-        <a href="#">About Us</a>
+        <a href="https://sekurd.com/about-us.html" target="_blank">About Us</a>
       </li>
       <li>
-        <a href="#">Features</a>
+        <a href="#FeaturesSection">Features</a>
       </li>
       <li>
         <a href="#">Packages</a>
       </li>
       <li>
-        <a href="#">Contact us</a>
+        <a href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -268,26 +268,26 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item active">
-                  <a class="nav_link" href="#">Home</a>
+                  <a class="nav_link" href="#HomeSection">Home</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="#">About Us</a>
+                  <a class="nav_link" href="https://sekurd.com/about-us.html" target="_blank">About Us</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="#">Features</a>
+                  <a class="nav_link" href="#FeaturesSection">Features</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="#">Packages</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="#">Contact us</a>
+                  <a class="nav_link" href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
                 </li>
               </ul>
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-5">
           <div class="get_demo">
-            <a href="" class="get_demo_btn">Schedule a Demo</a>
+            <a href="https://sekurd.com/contact-us.html" target="_blank" class="get_demo_btn">Schedule a Demo</a>
             <a href="" class="logout_btn"><span>Login</span><img src="./assets/images/Log in.svg" alt=""></a>
           </div>
         </div>
@@ -295,7 +295,7 @@
     </div>
   </div>
 
-  <div class="custom_header">
+  <div class="custom_header" id="HomeSection">
     <div class="header_img_on_mobile">
       <img src="./assets/images/wepik-export-20231026003443tjA7 1.svg" alt="">
     </div>
@@ -314,7 +314,8 @@
               <h5>Out of Sight, Always in Control Dark Web Defense <br /> by <span>Sekurd</span></h5>
               <p>Because What You Can’t See Can Hurt You <br /> – We Make It Visible</p>
               <div class="header_links">
-                <a href="" class="header_links_demo">Schedule a Demo</a>
+                <a href="https://sekurd.com/contact-us.html" target="_blank" class="header_links_demo">Schedule a
+                  Demo</a>
                 <a href="" class="header_links_packaged"> <span>Our Packages</span> <img
                     src="./assets/images/Arrow right.png" alt=""> </a>
               </div>
@@ -330,7 +331,7 @@
     </div>
   </div>
 
-  <div class="our_services">
+  <div class="our_services" id="ServiceSection">
     <div class="our_services_image_top">
       <img src="./assets/images/Ellipse 3 (1).svg" alt="">
     </div>
@@ -381,7 +382,7 @@
     </div>
   </div>
 
-  <div class="pixel_by_pixel" style="background-image: url('./assets/images/Frame\ 52.png');">
+  <div class="pixel_by_pixel" id="FeaturesSection" style="background-image: url('./assets/images/Frame\ 52.png');">
     <div class="container-fluid pd-100">
       <div class="section_header">
         <h5>
@@ -617,7 +618,7 @@
     <div class="fortify_svg">
       <img src="./assets/images/Vector (2).svg" alt="">
     </div>
-    <div class="container-fluid pd-100">
+    <div class="container-fluid pd-100" style="padding-right: 0;">
       <div class="section_header col-xl-4 col-lg-6 mx-auto" data-aos="fade-up">
         <h5>Why Choose Sekurd for Dark Web Monitoring?</h5>
       </div>
@@ -688,7 +689,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="why_choose_sekurd_img" data-aos="fade-down">
-            <img class="w-90" src="./assets/images/image 2.png" alt="">
+            <img class="w-90" src="./assets/images/Frame 326 (1).png" alt="">
           </div>
         </div>
       </div>
@@ -716,7 +717,7 @@
 
   <div class="industries">
     <div class="container-fluid pd-100">
-      <div class="section_header" data-aos="fade-up">
+      <div class="section_header pd-100" style="padding-left: 0;" data-aos="fade-up">
         <h5>Industries at High Risk</h5>
       </div>
       <div class="wrapper" data-aos="fade-up">
@@ -795,13 +796,13 @@
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide dotactivevideo">
                   <div class="card_img">
                     <div class="line">
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/Frame 312.png" alt="">
+                      <video src="./assets/videos/WhatsApp Video 2025-01-28 at 3.39.36 PM.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -835,7 +836,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/pexels-brett-sayles-1624895.jpg" alt="">
+                      <video src="./assets/videos/12981887_1280_720_60fps.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -852,7 +853,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/pexels-cookiecutter-1148820.jpg" alt="">
+                      <video src="./assets/videos/8731441-hd_1280_720_25fps.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -869,7 +870,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/pexels-kevin-ku-92347-577585.jpg" alt="">
+                      <video src="./assets/videos/5669738-hd_1280_720_24fps.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -886,7 +887,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/pexels-markusspiske-177598.jpg" alt="">
+                      <video src="./assets/videos/1422633-hd_1920_810_24fps.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -903,7 +904,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/pexels-pixabay-265152.jpg" alt="">
+                      <video src="./assets/videos/18308551-hd_720_1280_30fps.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -920,7 +921,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/Frame 312.png" alt="">
+                      <video src="./assets/videos/8262686-hd_1366_720_25fps.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -939,10 +940,7 @@
     </div>
   </div>
 
-  <div class="testemonial">
-    <!-- <div class="fortify_svg">
-      <img src="./assets/images/Vector (3).svg" alt="">
-    </div> -->
+  <!-- <div class="testemonial">
     <div class="container-fluid pd-100">
       <div class="section_header col-lg-7 mx-auto">
         <h6>TESTIMONIAL</h6>
@@ -1060,7 +1058,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="dark_web">
     <div class="fortify_svg">
@@ -1076,7 +1074,7 @@
         <div class="col-sm-12 col-md-12 col-lg-7">
           <div class="dark_web_cards">
             <div class="row">
-              <div class="col-sm-12 col-md-6 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6">
                 <div class="dark_web_card" data-aos="fade-up">
                   <h5>+15 Billion</h5>
                   <p>
@@ -1086,7 +1084,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-12 col-md-6 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6">
                 <div class="dark_web_card" data-aos="fade-up">
                   <h5>+60%</h5>
                   <p>
@@ -1095,7 +1093,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-12 col-md-6 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6">
                 <div class="dark_web_card" data-aos="fade-up">
                   <h5>$4.45 Million</h5>
                   <p>
@@ -1105,7 +1103,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-12 col-md-6 col-lg-6">
+              <div class="col-6 col-md-6 col-lg-6">
                 <div class="dark_web_card" data-aos="fade-up">
                   <h5>30,000 websites</h5>
                   <p>
@@ -1132,10 +1130,10 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, sed.
             </p>
             <ul class="list-unstyled d-flex">
-              <li><a href="" target="_blank"><img src="./assets/images/ig.svg" alt=""></a></li>
+              <li><a href="https://www.instagram.com/sekurd_official/" target="_blank"><img src="./assets/images/ig.svg" alt=""></a></li>
               <li><a href="" target="_blank"><img src="./assets/images/fb.svg" alt=""></a></li>
-              <li><a href="" target="_blank"><img src="./assets/images/tw.svg" alt=""></a></li>
-              <li><a href="" target="_blank"><img src="./assets/images/yt.svg" alt=""></a></li>
+              <li><a href="https://x.com/Sekurd_official" target="_blank"><img src="./assets/images/tw.svg" alt=""></a></li>
+              <li><a href="https://www.linkedin.com/company/103963171" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
           </div>
         </div>
@@ -1143,10 +1141,10 @@
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="">Our Services</a></li>
-              <li><a href="">About Us</a></li>
+              <li><a href="#ServiceSection">Our Services</a></li>
+              <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
               <li><a href="">Pricing</a></li>
-              <li><a href="">Testemonial</a></li>
+              <!-- <li><a href="">Testemonial</a></li> -->
             </ul>
           </div>
         </div>
