--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <a href="#FeaturesSection">Features</a>
       </li>
       <li>
-        <a href="#">Packages</a>
+        <a href="#pricingSection">Packages</a>
       </li>
       <li>
         <a href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
@@ -277,7 +277,7 @@
                   <a class="nav_link" href="#FeaturesSection">Features</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="#">Packages</a>
+                  <a class="nav_link" href="#pricingSection">Packages</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
@@ -722,7 +722,7 @@
       </div>
       <div class="wrapper" data-aos="fade-up">
         <div class="frame">
-          <!-- <img src="./assets/images/Frame 322.svg" alt=""> -->
+          <img src="./assets/images/Frame 322.svg" alt="">
         </div>
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-5 col-lg-4 order-mobile-second">
@@ -802,7 +802,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/WhatsApp Video 2025-01-28 at 3.39.36 PM.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/WhatsApp Video 2025-01-28 at 3.39.36 PM.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -836,7 +836,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/12981887_1280_720_60fps.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/12981887_1280_720_60fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -853,7 +853,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/8731441-hd_1280_720_25fps.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/8731441-hd_1280_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -870,7 +870,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/5669738-hd_1280_720_24fps.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/5669738-hd_1280_720_24fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -887,7 +887,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/1422633-hd_1920_810_24fps.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/1422633-hd_1920_810_24fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -904,7 +904,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/18308551-hd_720_1280_30fps.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/18308551-hd_720_1280_30fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -921,7 +921,7 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/8262686-hd_1366_720_25fps.mp4" autoplay muted loop playsinline></video>
+                      <video src="./assets/videos/8262686-hd_1366_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -937,6 +937,108 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="pricing" data-aos="fade-up" id="pricingSection">
+    <div class="container-fluid pd-100">
+      <div class="section_header">
+        <h5>Be more safe</h5>
+        <p>our package to save your data and get you up to date if there is a leaked</p>
+      </div>
+      <div class="pricing_table_wrapper">
+        <div class="pricing_table">
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <th></th>
+                <th>
+                  <span>Standard</span>
+                  <p><sub>$</sub>3000/<span>year</span></p>
+                </th>
+                <th>
+                  <span>Premium</span>
+                  <p><sub>$</sub>5000/<span>year</span></p>
+                </th>
+                <th>
+                  <span>Enterprise</span>
+                  <p><sub>$</sub>10,000/<span>year</span></p>
+                </th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><p>Dark web monitoring</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Dark web monitoring</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Typo Squatting</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Real time notification</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Employee / User account</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>VIP protection </p></td>
+                  <td><img src="./assets/images/Icon copy.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Dedicated security analyst </p></td>
+                  <td><img src="./assets/images/Icon copy.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon copy.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Scan frequency</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Number of Domains</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td><p>Admins</p></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                  <td><img src="./assets/images/Icon.svg" alt=""></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td><p>Select</p></td>
+                  <td> <div class="recomen"> <img src="./assets/images/Star.svg" alt=""> <p>Recommend</p> </div> </td>
+                  <td><p>Select</p></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 
@@ -1143,7 +1245,7 @@
             <ul class="list-unstyled">
               <li><a href="#ServiceSection">Our Services</a></li>
               <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
-              <li><a href="">Pricing</a></li>
+              <li><a href="#pricingSection">Pricing</a></li>
               <!-- <li><a href="">Testemonial</a></li> -->
             </ul>
           </div>
