--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- SEO META -->
   <meta property="title" content="Sekurd Eye" />
   <meta property="description" content="Sekurd Eye" />
-  <link rel="shortcut icon" href="./assets/images/favicon.ico" />
+  <link rel="shortcut icon" href="./assets/images/logo-1.png" />
   <link rel="stylesheet" href="./assets/css/all.min.css" />
   <!-- for english version please change bootstrap to en bootstrap ./assets/css/bootstrap.min.css -->
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
@@ -245,9 +245,9 @@
       <li>
         <a href="#FeaturesSection">Features</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#pricingSection">Packages</a>
-      </li>
+      </li> -->
       <li>
         <a href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
       </li>
@@ -276,9 +276,9 @@
                 <li class="nav_item">
                   <a class="nav_link" href="#FeaturesSection">Features</a>
                 </li>
-                <li class="nav_item">
+                <!-- <li class="nav_item">
                   <a class="nav_link" href="#pricingSection">Packages</a>
-                </li>
+                </li> -->
                 <li class="nav_item">
                   <a class="nav_link" href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
                 </li>
@@ -288,7 +288,8 @@
         <div class="col-sm-12 col-md-12 col-lg-5">
           <div class="get_demo">
             <a href="https://sekurd.com/contact-us.html" target="_blank" class="get_demo_btn">Schedule a Demo</a>
-            <a href="" class="logout_btn"><span>Login</span><img src="./assets/images/Log in.svg" alt=""></a>
+            <a href="https://app.sekurdeye.com/auth/login" target="_blank" class="logout_btn"><span>Login</span><img
+                src="./assets/images/Log in.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -316,8 +317,9 @@
               <div class="header_links">
                 <a href="https://sekurd.com/contact-us.html" target="_blank" class="header_links_demo">Schedule a
                   Demo</a>
-                <a href="" class="header_links_packaged"> <span>Our Packages</span> <img
-                    src="./assets/images/Arrow right.png" alt=""> </a>
+                <!-- <a href="" class="header_links_packaged"> <span>Our Packages</span> <img
+                    src="./assets/images/Arrow right.png" alt="">
+                </a> -->
               </div>
             </div>
           </div>
@@ -703,7 +705,7 @@
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-6 col-lg-8">
             <h5 data-aos="fade-up">Don’t Wait To Be The Next Breach.</h5>
-            <a data-aos="fade-up" href="">Schedule a Demo</a>
+            <a data-aos="fade-up" href="https://sekurd.com/contact-us.html" target="_blank">Schedule a Demo</a>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="dont_wait_img" data-aos="fade-up">
@@ -768,7 +770,8 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/Frame 309.png" alt="">
+                      <video src="./assets/videos/WhatsApp Video 2025-01-28 at 3.39.36 PM.mp4" autoplay muted
+                        playsinline></video>
                     </div>
                     <div class="card_content">
                       <h5>Financial Services & Banking</h5>
@@ -785,13 +788,12 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/Frame 313.png" alt="">
+                      <video src="./assets/videos/8381411-hd_1280_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Healthcare & Pharmaceuticals Photos</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Safeguard patient data and pharmaceutical research by detecting and mitigating cyber threats.
                       </p>
                     </div>
                   </div>
@@ -802,13 +804,13 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <video src="./assets/videos/WhatsApp Video 2025-01-28 at 3.39.36 PM.mp4" autoplay muted playsinline></video>
+                      <video src="./assets/videos/5658299-hd_1366_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Retail & E-Commerce</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your retail and e-commerce platforms from cyber threats. Ensure the security and
+                        integrity of your customer data and transactions.
                       </p>
                     </div>
                   </div>
@@ -819,13 +821,13 @@
                       <img src="./assets/images/Group 1000001001.svg" alt="">
                     </div>
                     <div class="img_parent">
-                      <img src="./assets/images/Frame 52.png" alt="">
+                      <video src="./assets/videos/3209829-hd_1280_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Technology & SaaS</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your technology and SaaS infrastructure from cyber threats. Ensure the security and
+                        reliability of your software and services.
                       </p>
                     </div>
                   </div>
@@ -839,10 +841,10 @@
                       <video src="./assets/videos/12981887_1280_720_60fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Government & Defense</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your government and defense systems from cyber threats. Ensure the security and
+                        integrity of your critical infrastructure.
                       </p>
                     </div>
                   </div>
@@ -856,10 +858,10 @@
                       <video src="./assets/videos/8731441-hd_1280_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Legal & Professional Services</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your legal and professional services from data breaches and cyber threats. Ensure the
+                        confidentiality and integrity of your sensitive information.
                       </p>
                     </div>
                   </div>
@@ -873,10 +875,10 @@
                       <video src="./assets/videos/5669738-hd_1280_720_24fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Energy & Utilities</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your energy and utilities infrastructure from cyber threats. Ensure the security and
+                        reliability of your critical systems.
                       </p>
                     </div>
                   </div>
@@ -890,10 +892,10 @@
                       <video src="./assets/videos/1422633-hd_1920_810_24fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Education</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your educational institution from data breaches and cyber threats. Ensure the safety and
+                        privacy of student and staff information.
                       </p>
                     </div>
                   </div>
@@ -907,10 +909,10 @@
                       <video src="./assets/videos/18308551-hd_720_1280_30fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Telecommunications</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your telecommunications infrastructure from unauthorized access and data breaches.
+                        Ensure the security and reliability of your communication networks.
                       </p>
                     </div>
                   </div>
@@ -924,10 +926,10 @@
                       <video src="./assets/videos/8262686-hd_1366_720_25fps.mp4" autoplay muted playsinline></video>
                     </div>
                     <div class="card_content">
-                      <h5>Financial Services & Banking</h5>
+                      <h5>Media & Entertainment</h5>
                       <p class="col-lg-7">
-                        Safeguard customer accounts by detecting stolen credit card data and banking credentials to
-                        prevent fraud.
+                        Protect your media assets from unauthorized access and distribution. Ensure the integrity of
+                        your content and maintain audience trust.
                       </p>
                     </div>
                   </div>
@@ -940,7 +942,7 @@
     </div>
   </div>
 
-  <div class="pricing" data-aos="fade-up" id="pricingSection">
+  <!-- <div class="pricing" data-aos="fade-up" id="pricingSection">
     <div class="container-fluid pd-100">
       <div class="section_header">
         <h5>Be more safe</h5>
@@ -1040,7 +1042,7 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="testemonial">
     <div class="container-fluid pd-100">
@@ -1229,13 +1231,16 @@
               <img src="./assets/images/logo 1.svg" alt="">
             </a>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, sed.
+              Join us at Sekurd, and together, let’s build a secure foundation for your organization’s digital journey.
             </p>
             <ul class="list-unstyled d-flex">
-              <li><a href="https://www.instagram.com/sekurd_official/" target="_blank"><img src="./assets/images/ig.svg" alt=""></a></li>
-              <li><a href="" target="_blank"><img src="./assets/images/fb.svg" alt=""></a></li>
-              <li><a href="https://x.com/Sekurd_official" target="_blank"><img src="./assets/images/tw.svg" alt=""></a></li>
-              <li><a href="https://www.linkedin.com/company/103963171" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="https://www.instagram.com/sekurd_official/" target="_blank"><img src="./assets/images/ig.svg"
+                    alt=""></a></li>
+              <!-- <li><a href="" target="_blank"><img src="./assets/images/fb.svg" alt=""></a></li> -->
+              <li><a href="https://x.com/Sekurd_official" target="_blank"><img src="./assets/images/tw.svg" alt=""></a>
+              </li>
+              <li><a href="https://www.linkedin.com/company/103963171" target="_blank"><i
+                    class="fab fa-linkedin-in"></i></a></li>
             </ul>
           </div>
         </div>
@@ -1254,9 +1259,9 @@
           <div class="footer_links">
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
-              <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurdeye.com</span></a></li>
+              <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurd.com</span></a></li>
               <li><a href=""><i class="fas fa-map-marker-alt"></i><span>Duha, Qatar</span></a></li>
-              <li><a href=""><i class="fas fa-phone"></i><span>010016588656</span></a></li>
+              <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
             </ul>
           </div>
         </div>
