--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,8 @@
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
               <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurd.com</span></a></li>
-              <li><a href=""><i class="fas fa-map-marker-alt"></i><span>Duha, Qatar</span></a></li>
+              <li><a href=""><i class="fas fa-map-marker-alt"></i><span>Addiyar Building, Ground
+                Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
             </ul>
           </div>
