--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Sekurd Eye</title>
+  <title>SekurdEYE</title>
 </head>
 
 <body>
@@ -1255,18 +1255,19 @@
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-2">
+        <div class="col-6 col-md-4 col-lg-3">
           <div class="footer_links">
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
               <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurd.com</span></a></li>
-              <li><a href=""><i class="fas fa-map-marker-alt"></i><span>Addiyar Building, Ground
-                Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75 Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504, Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li>
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
             </ul>
           </div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-5">
+        <div class="col-sm-12 col-md-12 col-lg-4">
           <div class="news_letter">
             <h5>Newsletter</h5>
             <div class="form_group">
