--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js">	</script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <!-- for animation -->
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
@@ -259,7 +260,7 @@
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-12 col-lg-7">
           <nav class="navbar-links d-flex align-items-center">
-            <a class="navbarـbrand" href="#">
+            <a class="navbarـbrand" href="./index.html">
               <img src="./assets/images/logo 1.svg" alt="logo" />
             </a>
             <a class="navbar_toggler_btn" href="#menu">
@@ -287,7 +288,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-5">
           <div class="get_demo">
-            <a href="https://sekurd.com/contact-us.html" target="_blank" class="get_demo_btn">Schedule a Demo</a>
+            <a class="get_demo_btn scheduleButton">Schedule a Demo</a>
             <a href="https://app.sekurdeye.com/auth/login" target="_blank" class="logout_btn"><span>Login</span><img
                 src="./assets/images/Log in.svg" alt=""></a>
           </div>
@@ -315,7 +316,7 @@
               <h5>Out of Sight, Always in Control Dark Web Defense <br /> by <span>Sekurd</span></h5>
               <p>Because What You Can’t See Can Hurt You <br /> – We Make It Visible</p>
               <div class="header_links">
-                <a href="https://sekurd.com/contact-us.html" target="_blank" class="header_links_demo">Schedule a
+                <a class="header_links_demo scheduleButton">Schedule a
                   Demo</a>
                 <!-- <a href="" class="header_links_packaged"> <span>Our Packages</span> <img
                     src="./assets/images/Arrow right.png" alt="">
@@ -705,7 +706,7 @@
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-6 col-lg-8">
             <h5 data-aos="fade-up">Don’t Wait To Be The Next Breach.</h5>
-            <a data-aos="fade-up" href="https://sekurd.com/contact-us.html" target="_blank">Schedule a Demo</a>
+            <a data-aos="fade-up" class="scheduleButton">Schedule a Demo</a>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="dont_wait_img" data-aos="fade-up">
@@ -1251,6 +1252,8 @@
               <li><a href="#ServiceSection">Our Services</a></li>
               <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
               <li><a href="#pricingSection">Pricing</a></li>
+              <li><a href="./terms-condition.html">Terms & Conditions</a></li>
+              <li><a href="./privacy-policy.html">Privacy Policy</a></li>
               <!-- <li><a href="">Testemonial</a></li> -->
             </ul>
           </div>
@@ -1261,9 +1264,12 @@
             <ul class="list-unstyled">
               <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurd.com</span></a></li>
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75 Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504, Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
+                    Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+                    Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li>
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
+                    Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
             </ul>
           </div>
         </div>
@@ -1280,6 +1286,8 @@
     </div>
   </div>
 
+
+
   <script src="./assets/js/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
   <script src="./assets/js/popper.min.js"></script>
@@ -1292,6 +1300,7 @@
   <script src="./assets/js/aos.js"></script>
   <script src="./assets/js/jquery.mCustomScrollbar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.mmenu/9.3.0/mmenu.min.js"
     integrity="sha512-l2fHTYCLVbhRDc5CZWrkKJ06JWFjG5etNQ4G85PbyRiHP769IiVDmhwI0BYSFOXYJUYRmaq5PvfaxacZm9eqhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
